compiler-cli/src/new/snapshots/glistix__new__tests__new_with_default_template@.gitmodules.snap
---
source: compiler-cli/src/new/tests.rs
expression: "crate::fs::read(Utf8PathBuf::from_path_buf(file_path.to_path_buf()).expect(\"Non Utf8 Path\"),).unwrap()"
snapshot_kind: text
---
[submodule "stdlib"]
	path = external/stdlib
	url = https://github.com/glistix/stdlib
