compiler-cli/src/new/snapshots/glistix__new__tests__new_with_javascript_template@.gitignore.snap
---
source: compiler-cli/src/new/tests.rs
expression: "crate::fs::read(Utf8PathBuf::from_path_buf(file_path.to_path_buf()).expect(\"Non Utf8 Path\"),).unwrap()"
snapshot_kind: text
---
*.beam
*.ez
/build
erl_crash.dump
_gleam_artefacts
